main done and folder structure changed

--- a/Talki/src/app/pages/login/login.component.html
+++ b/Talki/src/app/pages/login/login.component.html
@@ -1,9 +1,8 @@
 <body>
     <div class="container my-5" align="center">
       <form>
-        <fieldset><legend>Login</legend></fieldset>
-
-        <app-header></app-header>
+        <div class="legend">Sign up</div>
+       <app-title></app-title>
 
         <div class="form-fields">
           <div class="mb-3">
