--- a/Talki/src/app/pages/signup/signup.component.css
+++ b/Talki/src/app/pages/signup/signup.component.css
@@ -5,12 +5,21 @@ form{
     border:4px solid #4adc96;
     padding: 1rem;
     border-radius: 20px;
+    position: relative;
 
 }
-fieldset{
-    color:  #4adc96;
-}
 
+.legend{
+    font-size: 1.5rem;
+    color: #4adc96;
+    position: absolute;
+    top: -7%;
+    background-color: #5e5b6b;
+    border: 2px solid #4adc96;
+    padding: 0.5rem 2rem;
+    border-radius: 50px;
+
+}
 .form-fields{
     margin:1rem;
 }
@@ -29,6 +38,7 @@ button{
     padding: 0.5rem 1.9rem;
     border:1px solid white;
     cursor: pointer;
+    
 }
 
 button:hover {
