--- a/Talki/src/app/pages/signup/signup.component.html
+++ b/Talki/src/app/pages/signup/signup.component.html
@@ -1,8 +1,8 @@
 <body>
   <div class="container my-5" align="center">
     <form>
-      <fieldset><legend>Sign up</legend></fieldset>
-      <app-header></app-header>
+      <div class="legend">Sign up</div>
+      <app-title></app-title>
       <div class="form-fields">
         <div class="mb-3">
           <input
