--- a/Talki/src/app/components/main/navbar/navbar.component.html
+++ b/Talki/src/app/components/main/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<body>
+<div class="main fixed-top">
 <div class="nav-main">
     <div class="nav-left">
         <span><a>Home</a></span>
@@ -9,4 +9,5 @@
         <button (click)="login()">Login</button>
     </div>
 </div>
-</body>
+<hr />
+</div>
