--- a/Talki/src/app/pages/home/home.component.html
+++ b/Talki/src/app/pages/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+
+<div>
+<app-header></app-header>
+
+<div class="content">
+    <div class="content-left">
+        <app-join-meet></app-join-meet>
+    </div>
+    <div class="content-right">
+        <app-sch-meet></app-sch-meet>
+    </div>
+</div>
+</div>
