--- a/Talki/src/app/pages/login/login.component.html
+++ b/Talki/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="container my-5" align="center">
       <form>
-        <div class="legend">Sign up</div>
+        <div class="legend">Login</div>
        <app-title></app-title>
 
         <div class="form-fields">
@@ -25,7 +25,7 @@
    
         </div>
   
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-primary" (click)="home()">Login</button>
   
         <div class="end">
           <span>No account?</span>
