--- a/Talki/src/app/pages/signup/signup.component.html
+++ b/Talki/src/app/pages/signup/signup.component.html
@@ -42,9 +42,10 @@
 
       </div>
 
-      <button type="submit" class="btn btn-primary">Sign Up</button>
+      <button type="submit" class="btn btn-primary" (click)="home()">Sign Up</button>
 
       <div class="end">
+        
         <span>Already have an account?</span>
         <span id="login" (click)="login()"> Login</span>
       </div>
