--- a/Talki/src/app/components/main/navbar/navbar.component.css
+++ b/Talki/src/app/components/main/navbar/navbar.component.css
@@ -1,25 +1,35 @@
 *{
     color:white;
+   
 }
-.body{
-    position: fixed;
-}
+
+
 button{
-    margin: 0.5rem;
+    margin: -0.1rem 1rem;
     background-color: #4adc96;
     border-radius: 50px;
-    padding: 0rem 1.5rem;
+    padding: 0rem 1.5rem 0.3rem 1.5rem ;
     border: 1px solid white;
 
+
+}
+.main{
+ background-color: #5e5b6b;
+ margin-bottom: 20rem;
 }
 
-div{
+hr{
+    margin-bottom: 0;
+}
+.nav-main{ 
+   
     display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
+    margin-top:1rem;
 }
 
-div span{
+.nav-left span{
     margin:0.5rem 0.4rem;
     padding:0.5rem 0.9rem;
 }
