--- a/Talki/src/styles.css
+++ b/Talki/src/styles.css
@@ -2,4 +2,6 @@ body{
     padding:0;
     margin:0;
     background-color: #5e5b6b !important;
+    font-family: 'Aladin', cursive;
+    color:white;
 }
