edit-profile added

--- a/Talki/src/app/components/header/header.component.html
+++ b/Talki/src/app/components/header/header.component.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="header-right">
-            <span>User</span>
+            <span title="Edit Profile" (click)="edit_profile()">User</span>
             <svg width="40"
             height="50"
             (click)="login()"
